--- a/package.json
+++ b/package.json
@@ -16,12 +16,19 @@
   "dependencies": {
     "-": "^0.0.1",
     "@faker-js/faker": "^7.3.0",
+    "assert": "^2.0.0",
     "bcrypt": "^5.0.1",
+    "cors-anywhere": "^0.4.4",
+    "dotenv": "^16.0.1",
+    "dotenv-webpack": "^8.0.0",
     "express": "^4.18.1",
+    "igdb-api-node": "^5.0.1",
     "jsonwebtoken": "^8.5.1",
     "pg": "^8.7.3",
+    "proxy-from-env": "^1.1.0",
     "redux-logger": "^3.0.6",
-    "sequelize": "^6.21.3"
+    "sequelize": "^6.21.3",
+    "util": "^0.12.4"
   },
   "devDependencies": {
     "@babel/core": "^7.18.10",
