--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react-router-dom": "^5.3.3",
     "redux": "^4.2.0",
     "redux-thunk": "^2.4.1",
+    "style-loader": "^3.3.1",
     "supertest": "^6.2.4",
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0"
