--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "babel-loader": "^8.2.5",
     "chai": "^4.3.6",
     "css-loader": "^6.7.1",
+    "focus-trap-react": "^9.0.2",
     "mocha": "^10.0.0",
     "nodemon": "^2.0.19",
     "react": "^18.2.0",
