--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
     "proxy-from-env": "^1.1.0",
     "redux-logger": "^3.0.6",
     "sequelize": "^6.21.3",
-    "util": "^0.12.4"
+    "util": "^0.12.4",
+    "@reach/combobox": "0.1.1",
+    "@reach/menu-button": "0.1.18"
   },
   "devDependencies": {
     "@babel/core": "^7.18.10",
