--- a/package.json
+++ b/package.json
@@ -17,6 +17,10 @@
   "dependencies": {
     "-": "^0.0.1",
     "@faker-js/faker": "^7.3.0",
+    "@fortawesome/fontawesome-svg-core": "^6.1.2",
+    "@fortawesome/react-fontawesome": "^0.2.0",
+    "@reach/combobox": "0.1.1",
+    "@reach/menu-button": "0.1.18",
     "assert": "^2.0.0",
     "bcrypt": "^5.0.1",
     "cors-anywhere": "^0.4.4",
@@ -29,9 +33,7 @@
     "proxy-from-env": "^1.1.0",
     "redux-logger": "^3.0.6",
     "sequelize": "^6.21.3",
-    "util": "^0.12.4",
-    "@reach/combobox": "0.1.1",
-    "@reach/menu-button": "0.1.18"
+    "util": "^0.12.4"
   },
   "devDependencies": {
     "@babel/core": "^7.18.10",
