--- a/package.json
+++ b/package.json
@@ -24,11 +24,14 @@
     "assert": "^2.0.0",
     "bcrypt": "^5.0.1",
     "cors-anywhere": "^0.4.4",
+    "crypto": "^1.0.1",
     "dotenv": "^16.0.1",
     "dotenv-webpack": "^8.0.1",
     "express": "^4.18.1",
+    "handlebars": "^4.7.7",
     "igdb-api-node": "^5.0.1",
     "jsonwebtoken": "^8.5.1",
+    "nodemailer": "^6.7.8",
     "pg": "^8.7.3",
     "proxy-from-env": "^1.1.0",
     "react-multi-carousel": "^2.8.2",
