--- a/package.json
+++ b/package.json
@@ -26,11 +26,14 @@
     "cors-anywhere": "^0.4.4",
     "dotenv": "^16.0.1",
     "dotenv-webpack": "^8.0.1",
+    "dropdown": "^0.2.0",
     "express": "^4.18.1",
     "igdb-api-node": "^5.0.1",
     "jsonwebtoken": "^8.5.1",
     "pg": "^8.7.3",
     "proxy-from-env": "^1.1.0",
+    "react-dropdown": "^1.10.0",
+    "react-dropdown-now": "^6.0.1",
     "redux-logger": "^3.0.6",
     "sequelize": "^6.21.3",
     "util": "^0.12.4"
