--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "test": "mocha spec.js",
     "test:dev": "QUIET=true JWT=shh DATABASE_URL=postgres://localhost/acme_db_test npm test -- --watch",
     "start:dev": "JWT=shhh nodemon server --ignore src/ --ignore dist/ & npm run build:dev",
+    "setup-db": "node setupdb.js",
     "start": "node server.js"
   },
   "keywords": [],
