setup for deploy

--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "build:dev": "npm run build -- --watch --mode=development",
     "test": "mocha spec.js",
     "test:dev": "QUIET=true JWT=shh DATABASE_URL=postgres://localhost/acme_db_test npm test -- --watch",
-    "start:dev": "JWT=shhh nodemon server --ignore src/ --ignore dist/ & npm run build:dev",
-    "setup-db": "node setupdb.js",
+    "start:dev": "JWT=shhh nodemon -r dotenv/config server --ignore src/ --ignore dist/ & npm run build:dev",
+    "setup-db": "node -r dotenv/config setupdb.js",
     "start": "node server.js"
   },
   "keywords": [],
